style.css
/* ... */
header > div {
  padding: 26px 42px 0px 22px;
  line-height: 31px;
}

.left-nav {
  display: flex;
  flex-direction: row;
  margin-left: 3px;
  margin-top: 3px;
}

.left-nav img:first-of-type {
  margin-left: 5px;
}

.left-nav img {
  width: 32px;
  margin-top: 2px;
  margin-right: 12px;
  transition: transform 3.8s;
}

.left-nav img:hover {
  transform: rotate3d(2, 2, 2, 360deg);
}

.right-nav {
  display: flex;
  justify-content: flex-end;
  padding: 30px 12px 52px 52px;
  overflow: hidden;
  position: absolute;
  width: 500px;
  top: 0;
  right: 0;
  height: 500px;
  width: 150px;
}

.Portfolio:hover {
  color: rgb(50, 113, 207) !important;
}

.About:hover {
  color: rgb(189, 50, 207) !important;
}

.Contact:hover {
  color: rgb(50, 207, 181) !important;
}

.climbing-man-image {
  position: absolute;
  left: -180px;
  top: 300px;
  z-index: 10;
}

.fadeOut {
  animation: fadeOut;
  animation-duration: .4s;
  animation-delay: 2s;
  animation-fill-mode: forwards;
}

.light-bulb-image {
  max-width: 150px;
  filter: brightness(1.6);
  position: relative;
  left: 427px;
}

.drawing-image {
  border-radius: 100%;
  max-width: 120px;
  filter: contrast(10) hue-rotate(200deg);
  top: -55px;
  position: absolute;
}

hr {
  width: 80px;
  height: 2px;
  background-color: rgb(204, 204, 204);
  border: none;
  animation: tada 3s;
}

section > h2 {
  letter-spacing: 1px;
  text-align: center;
}

.intro-section {
  margin-bottom: 100px;
}

.intro-text {
  margin-top: 50px;
  text-align: center;
  font-size: 22px;
  color: black;
  letter-spacing: 1px;
}

.intro-text > span {
  font-size: 15px;
  font-weight: bold;
}

.intro-text > span > span {
  transition: font-style .1s;
  cursor: pointer;
}

.intro-text > span > span:hover {
  font-style: italic;
  box-shadow: 0px 14px 6px rgb(250, 250, 250);
}

.intro-text > p {
  color: rgb(20, 20, 20);
  text-transform: uppercase;
  font-size: 32px;
  transform: scaleY(1.2);
  font-weight: bold;
  line-height: 38px;
}

.right-arrow-img {
  transform: rotate(-27deg);
  text-align: right;
  margin-top: 180px;
  z-index: 1;
}

.right-arrow-img > img {
  width: 210px;
}

.code-icons {
  margin-top: 120px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(245, 245, 245);
  padding: 24px;
}

.code-icons > img {
  width: 60px;
  margin-right: 60px;
}

.express {
  width: 100px !important;
  height: 30.2px !important;
}

.portfolio-section {
  position: relative;
  margin-top: 110px;
}

.portfolio-section hr {
  width: 125px;
  margin-bottom: 12px;
}

.portfolio-section > h2,
.about-section > h2,
.contact-section > h2 {
  text-align: center;
  font-size: 49px;
  letter-spacing: 1px;
  color: black;
}

.portfolio-section h3 {
  font-size: 49px;
  margin: 0;
  letter-spacing: 4px;
  text-shadow: 2px 2px 2px rgb(0, 0, 0);
  padding: 0;
  display: inline;
  line-height: 0px;
  text-transform: lowercase;
  font-family: 'Ubuntu Condensed', Arial, Helvetica, sans-serif;
}

.first-product h3 {
  color: rgb(85, 145, 236);
}

.second-product h3 {
  color: rgb(206, 70, 224);
}

.third-product h3 {
  color: rgb(50, 207, 181);
}

.portfolio-section p {
  font-size: 19px;
  color: rgb(87, 87, 87);
  text-align: left;
  width: 410px;
  margin: auto;
  padding: 10px 0px;
}

.product-summary {
  font-size: 19px;
  width: 410px;
  margin: auto;
  text-align: left;
  color: rgb(87, 87, 87);
}

.product-bottom-text {
  color: rgb(87, 87, 87);
  margin: 0;
  padding: 0;
  font-size: 18px;
  width: 410px;
}

.first-product {
  margin-top: 120px;
}

.first-product,
.third-product {
  display: flex;
  justify-content: center;
  text-align: center;
  font-family: 'Ubuntu', 'Arial Narrow', Arial, sans-serif;
  margin-bottom: 140px;
  margin-right: 65px;
}

.second-product {
  display: flex;
  justify-content: center;
  text-align: center;
  font-family: 'Ubuntu', 'Arial Narrow', Arial, sans-serif;
  margin-bottom: 140px;
  margin-left: 45px;
}

.third-product {
  margin-bottom: 80px;
}

.background-box {
  z-index: -1;
  position: absolute;
  height: 525px;
  width: 590px;
  transform: translate(60%, -9%);
  background-color: rgb(245, 245, 245);
  background-image: linear-gradient(to left, rgb(247, 247, 247), white);
  border-radius: 8px;
}

.background-box-second {
  z-index: -1;
  position: absolute;
  height: 545px;
  width: 590px;
  transform: translate(-57%, -8%);
  background-image: linear-gradient(to right, rgb(247, 247, 247), white);
  border-radius: 8px;
}

.background-box-third {
  z-index: -1;
  position: absolute;
  height: 525px;
  width: 590px;
  transform: translate(42%, -9%);
  background-image: linear-gradient(to left, rgb(247, 247, 247), white);
  border-radius: 8px;
}

.background-box-contact {
  z-index: -1;
  position: absolute;
  height: 525px;
  width: 590px;
  transform: translate(-22%, -9%);
  background-image: linear-gradient(to left, rgb(247, 247, 247), white);
  border-radius: 8px;
}

.product-tag {
  color: rgb(54, 54, 54);
  letter-spacing: 2px;
  font-weight: bold;
  margin-top: 12px;
  margin-bottom: 0;
  font-size: 20px;
}

.product-github {
  font-weight: bold;
  color: rgb(51, 51, 51);
}

.product-github a {
  text-decoration: none;
}

.product-github img {
  width: 38px;
  transition: transform 0.2s;
}

.product-github img:hover {
  transform: scale(1.1);
}

.first-product-img img {
  width: 780px;
  border-radius: 6px;
}

.second-product-img img {
  width: 725px;
  border-radius: 6px;
}

.third-product-img img {
  width: 578px;
}

.first-product-info {
  color: rgb(0, 0, 0);
  margin-left: 8px;
  z-index: 50;
}

.second-product-info {
  margin-right: 20px;
  z-index: 50;
}

.text-hr {
  margin-top: 10px;
  margin-bottom: 0;
  padding: 0;
}

.bot-hr {
  width: 145px !important;
  margin-top: 3px !important;
}
/* ... */

